iptables/iptables.rules
# Generated by iptables-save v1.6.0 on Sun Jun  5 10:39:25 2016
*mangle
:PREROUTING ACCEPT [1544839:3782639473]
:INPUT ACCEPT [1544837:3782638321]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1217036:690424719]
:POSTROUTING ACCEPT [1208195:689835590]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sun Jun  5 10:39:25 2016
# Generated by iptables-save v1.6.0 on Sun Jun  5 10:39:25 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Sun Jun  5 10:39:25 2016
# Generated by iptables-save v1.6.0 on Sun Jun  5 10:39:25 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 192.0.0.0/8 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m limit --limit 50/sec --limit-burst 50 -j ACCEPT
-A INPUT -s 192.0.0.0/8 -d 192.168.1.39/32 -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate NEW -m limit --limit 50/min --limit-burst 200 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -m conntrack --ctstate NEW -m limit --limit 50/min --limit-burst 200 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 43 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -d 192.0.0.0/8 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -s 192.168.1.39/32 -d 192.0.0.0/8 -o eth0 -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 43 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 123 -j ACCEPT
COMMIT
# Completed on Sun Jun  5 10:39:25 2016
